Update some class and method name
